--- a/writeup_before submission.ipynb
+++ b/writeup_before submission.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "From the above, we notice that S channel highlights the yellow line very well, so we will use the channel to do the shreshold manipulation. \n",
     "\n",
-    "#### 2.2 Combine color channel and gradient to shreshold the image. \n",
+    "#### 2.2 Combine color channel and x gradient to shreshold the image. \n",
     "\n",
     "We will combine the shreholds discussed above to process image to find lane lines (typically the yellow lines). The following two images are the contrast. We set the shresholds as follows by test and trials:\n",
     "\n",
@@ -111,7 +111,7 @@
     "\n",
     "We show the images as follows after the thresholds, since it looks well in detecting the yellow line covered in the shadow, we will use the combined shresholds to process images.\n",
     "\n",
-    "Origine             |  Processed\n",
+    "Original             |  Processed\n",
     ":-------------------------:|:-------------------------:\n",
     "![alt text][image3]  |  ![alt text][image11]\n",
     "\n",
