--- a/writeup_before submission.ipynb
+++ b/writeup_before submission.ipynb
@@ -35,6 +35,10 @@
     "[image9]: ./output_images/H_channel_of_test5.jpg\n",
     "[image10]: ./output_images/L_channel_of_test5.jpg\n",
     "[image11]: ./output_images/processed_of_test5.png\n",
+    "[image12]: ./output_images/masked_of_test5.png\n",
+    "[image13]: ./output_images/warped_of_test5.png\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "### Here I will consider the [rubric](https://review.udacity.com/#!/rubrics/571/view) points individually and describe how I addressed each point in my implementation.  \n",
@@ -118,6 +122,17 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "### 3. Get birdseye view of warped lines in an image\n",
+    "\n",
+    "In order to draw lines on the warped lane lines on the road, we could firstly find those warped lines through birdseye view of an image.  This can be done by selecting the specific area where the warped lines. Note that the source area and destination area were both tested in the notebook.\n",
+    "\n",
+    "Original             |  Warped\n",
+    ":-------------------------:|:-------------------------:\n",
+    "![alt text][image12]  |  ![alt text][image13]\n",
+    "\n",
+    "### 4.  Identified lane-line pixels and fit their positions with a polynomial in the warped image\n",
     "\n",
     "<!-- ### Pipeline (single images)\n",
     "\n",
