--- a/Explanation of the image process steps by steps.ipynb
+++ b/Explanation of the image process steps by steps.ipynb
@@ -555,31 +555,6 @@
    "outputs": [],
    "source": [
     "# I will decide a place to place the birdviewed image\n",
-    "\n",
-    "# def warp(img,tobird=True):\n",
-    "#     corners = np.float32([left_top,left_bottom, right_bottom,right_top])\n",
-    "#     offset = 150  #test the image to extimate a offset\n",
-    "#     img_size = (img.shape[1], img.shape[0])\n",
-    "#     src = np.float32(\n",
-    "#         [corners[0],\n",
-    "#          corners[1],\n",
-    "#          corners[2],\n",
-    "#          corners[3]])\n",
-    "    \n",
-    "#   #decide a place to place the birdviewed image, get these points by testing an image\n",
-    "#     dst = np.float32([\n",
-    "#         [offset, 0], \n",
-    "#         [offset, img_size[1]],                         \n",
-    "#         [img_size[0] - offset, img_size[1]],            \n",
-    "#         [img_size[0] - offset,0]])  \n",
-    "\n",
-    "#     if tobird:\n",
-    "#         M = cv2.getPerspectiveTransform(src, dst)\n",
-    "#     else:\n",
-    "#         M = cv2.getPerspectiveTransform(dst,src)\n",
-    "#     warped = cv2.warpPerspective(img, M, img_size , flags=cv2.INTER_LINEAR)    \n",
-    "#     return warped,M,src,dst\n",
-    "\n",
     "def warp_image_to_birdseye_view(image,corners):\n",
     "    img_size=(image.shape[1], image.shape[0])\n",
     "    #choose an offset to determine the distination  for birdseye view area\n",
@@ -608,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 634,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +592,7 @@
        "True"
       ]
      },
-     "execution_count": 613,
+     "execution_count": 634,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -682,16 +657,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16edd0d30>"
+       "True"
       ]
      },
-     "execution_count": 625,
+     "execution_count": 638,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -712,6 +687,7 @@
     "image=plt.imread('./output_images/processed_of_test5.png')\n",
     "warped,M= warp_image_to_birdseye_view(image,corners) \n",
     "plt.imshow(warped)\n",
+    "cv2.imwrite('./output_images/warped_binary_of_test5.png',warped*255)\n",
     "# warped,M= warp_image_to_birdseye_view(image,corners) \n",
     "\n",
     "# grad_thresh=[20,100]\n",
@@ -721,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 647,
    "metadata": {},
    "outputs": [
     {
@@ -734,10 +710,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16eeb54a8>"
+       "True"
       ]
      },
-     "execution_count": 627,
+     "execution_count": 647,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -758,6 +734,10 @@
     "\n",
     "# Load  above image\n",
     "binary_warped = warped\n",
+    "# histogram = np.sum(binary_warped[binary_warped.shape[0]//2:,:], axis=0)\n",
+    "# plt.plot(histogram)\n",
+    "# cv2.imwrite('./output_images/histogram_of_warped_test5.png',histogram)\n",
+    "\n",
     "\n",
     "def find_lane_pixels(binary_warped):\n",
     "    # Take a histogram of the bottom half of the image\n",
@@ -840,12 +820,13 @@
     "\n",
     "    return leftx, lefty, rightx, righty, out_img\n",
     "leftx, lefty, rightx, righty, out_img=find_lane_pixels(binary_warped)\n",
-    "plt.imshow(out_img)  "
+    "plt.imshow(out_img)  \n",
+    "cv2.imwrite('./output_images/pixels_of_warped_test5.png',out_img*255)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 650,
    "metadata": {},
    "outputs": [
     {
@@ -858,10 +839,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16ee113c8>"
+       "True"
       ]
      },
-     "execution_count": 628,
+     "execution_count": 650,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -911,6 +892,7 @@
     "left_fitx,right_fitx,out_img = fit_polynomial(binary_warped)\n",
     "\n",
     "plt.imshow(out_img)\n",
+    "cv2.imwrite('./output_images/fit_polynomial_in_warped_test5.png',out_img)\n",
     "# print(left_fitx)"
    ]
   },
