--- a/writeup_before submission.ipynb
+++ b/writeup_before submission.ipynb
@@ -37,6 +37,11 @@
     "[image11]: ./output_images/processed_of_test5.png\n",
     "[image12]: ./output_images/masked_of_test5.png\n",
     "[image13]: ./output_images/warped_of_test5.png\n",
+    "[image14]: ./output_images/warped_binary_of_test5.png\n",
+    "[image15]: ./output_images/pixels_of_warped_test5.png\n",
+    "[image16]: ./output_images/fit_polynomial_in_warped_test5.png\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -132,105 +137,19 @@
     ":-------------------------:|:-------------------------:\n",
     "![alt text][image12]  |  ![alt text][image13]\n",
     "\n",
-    "### 4.  Identified lane-line pixels and fit their positions with a polynomial in the warped image\n",
+    "### 4.  Find lane-line pixels and fit their positions with a polynomial in the warped image\n",
     "\n",
-    "<!-- ### Pipeline (single images)\n",
-    "\n",
-    "#### 1. Provide an example of a distortion-corrected image.\n",
-    "\n",
-    "To demonstrate this step, I will describe how I apply the distortion correction to one of the test images like this one:\n",
-    "![alt text][image2]\n",
+    "*  4.1 Let us draw the warped binary image in birdseye view and draw its histogram.\n",
     "\n",
     "\n",
-    "#### 2. Describe how (and identify where in your code) you used color transforms, gradients or other methods to create a thresholded binary image.  Provide an example of a binary image result.\n",
+    "warped_binary             |  pixels_location  |  fir_polynomial_lines\n",
+    ":-------------------------:|:-------------------------:|:-------------------------:\n",
+    "![alt text][image14]  |  ![alt text][image15] |![alt text][image16] \n",
     "\n",
-    "I used a combination of color and gradient thresholds to generate a binary image (thresholding steps at lines # through # in `another_file.py`).  Here's an example of my output for this step.  (note: this is not actually from one of the test images)\n",
+    "By using histogram of an image, we can find the lane pixels in the image. This video explains how to find the pixels [![Click here to for reference](https://youtu.be/siAMDK8C_x8/0.jpg)](https://youtu.be/siAMDK8C_x8) \n",
     "\n",
-    "![alt text][image3]\n",
-    "\n",
-    "#### 3. Describe how (and identify where in your code) you performed a perspective transform and provide an example of a transformed image.\n",
-    "\n",
-    "The code for my perspective transform includes a function called `warper()`, which appears in lines 1 through 8 in the file `example.py` (output_images/examples/example.py) (or, for example, in the 3rd code cell of the IPython notebook).  The `warper()` function takes as inputs an image (`img`), as well as source (`src`) and destination (`dst`) points.  I chose the hardcode the source and destination points in the following manner:\n",
-    "\n",
-    "```python\n",
-    "src = np.float32(\n",
-    "    [[(img_size[0] / 2) - 55, img_size[1] / 2 + 100],\n",
-    "    [((img_size[0] / 6) - 10), img_size[1]],\n",
-    "    [(img_size[0] * 5 / 6) + 60, img_size[1]],\n",
-    "    [(img_size[0] / 2 + 55), img_size[1] / 2 + 100]])\n",
-    "dst = np.float32(\n",
-    "    [[(img_size[0] / 4), 0],\n",
-    "    [(img_size[0] / 4), img_size[1]],\n",
-    "    [(img_size[0] * 3 / 4), img_size[1]],\n",
-    "    [(img_size[0] * 3 / 4), 0]])\n",
-    "```\n",
-    "\n",
-    "This resulted in the following source and destination points:\n",
-    "\n",
-    "| Source        | Destination   | \n",
-    "|:-------------:|:-------------:| \n",
-    "| 585, 460      | 320, 0        | \n",
-    "| 203, 720      | 320, 720      |\n",
-    "| 1127, 720     | 960, 720      |\n",
-    "| 695, 460      | 960, 0        |\n",
-    "\n",
-    "I verified that my perspective transform was working as expected by drawing the `src` and `dst` points onto a test image and its warped counterpart to verify that the lines appear parallel in the warped image.\n",
-    "\n",
-    "![alt text][image4]\n",
-    "\n",
-    "#### 4. Describe how (and identify where in your code) you identified lane-line pixels and fit their positions with a polynomial?\n",
-    "\n",
-    "Then I did some other stuff and fit my lane lines with a 2nd order polynomial kinda like this:\n",
-    "\n",
-    "![alt text][image5]\n",
-    "\n",
-    "#### 5. Describe how (and identify where in your code) you calculated the radius of curvature of the lane and the position of the vehicle with respect to center.\n",
-    "\n",
-    "I did this in lines # through # in my code in `my_other_file.py`\n",
-    "\n",
-    "#### 6. Provide an example image of your result plotted back down onto the road such that the lane area is identified clearly.\n",
-    "\n",
-    "I implemented this step in lines # through # in my code in `yet_another_file.py` in the function `map_lane()`.  Here is an example of my result on a test image:\n",
-    "\n",
-    "![alt text][image6]\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Pipeline (video)\n",
-    "\n",
-    "#### 1. Provide a link to your final video output.  Your pipeline should perform reasonably well on the entire project video (wobbly lines are ok but no catastrophic failures that would cause the car to drive off the road!).\n",
-    "\n",
-    "Here's a [link to my video result](./project_video.mp4)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Discussion\n",
-    "\n",
-    "#### 1. Briefly discuss any problems / issues you faced in your implementation of this project.  Where will your pipeline likely fail?  What could you do to make it more robust?\n",
-    "\n",
-    "Here I'll talk about the approach I took, what techniques I used, what worked and why, where the pipeline might fail and how I might improve it if I were going to pursue this project further.   -->"
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
