--- a/writeup_before submission.ipynb
+++ b/writeup_before submission.ipynb
@@ -40,6 +40,9 @@
     "[image14]: ./output_images/warped_binary_of_test5.png\n",
     "[image15]: ./output_images/pixels_of_warped_test5.png\n",
     "[image16]: ./output_images/fit_polynomial_in_warped_test5.png\n",
+    "[image17]: ./output_images/histogram_of_warped_test5.png\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -140,16 +143,29 @@
     "### 4.  Find lane-line pixels and fit their positions with a polynomial in the warped image\n",
     "\n",
     "*  4.1 Let us draw the warped binary image in birdseye view and draw its histogram.\n",
+    "The histogram is attached here,\n",
     "\n",
+    "\n",
+    "![alt text][image17]\n",
+    "\n",
+    "\n",
+    "Next,\n",
     "\n",
     "warped_binary             |  pixels_location  |  fir_polynomial_lines\n",
     ":-------------------------:|:-------------------------:|:-------------------------:\n",
     "![alt text][image14]  |  ![alt text][image15] |![alt text][image16] \n",
     "\n",
-    "By using histogram of an image, we can find the lane pixels in the image. This video explains how to find the pixels [![Click here to for reference](https://youtu.be/siAMDK8C_x8/0.jpg)](https://youtu.be/siAMDK8C_x8) \n",
+    "By using histogram of an image, we can find the lane pixels in the image. This video explains how to find the pixels [![Click here for reference](https://youtu.be/siAMDK8C_x8/0.jpg)](https://youtu.be/siAMDK8C_x8) \n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
