--- a/writeup for submission.ipynb
+++ b/writeup for submission.ipynb
@@ -184,6 +184,11 @@
     "*  Get shresholded image;\n",
     "*  Get birdseye view of warp image;\n",
     "*  Draw_lane_lines.\n",
+    "\n",
+    "\n",
+    "At the end I will share the project video that needs to be submitted here.\n",
+    "\n",
+    "[![Click to check the project video](https://www.youtube.com/watch?v=jiZ68gHHWys0.jpg)](https://www.youtube.com/watch?v=jiZ68gHHWys) \n",
     "\n"
    ]
   },
