--- a/writeup for submission.ipynb
+++ b/writeup for submission.ipynb
@@ -189,6 +189,15 @@
     "At the end I will share the project video that needs to be submitted here.\n",
     "\n",
     "[![Click to check the project video](https://www.youtube.com/watch?v=jiZ68gHHWys0.jpg)](https://www.youtube.com/watch?v=jiZ68gHHWys) \n",
+    "\n",
+    "### 9. Reflections on this project. \n",
+    " \n",
+    " The explanation video for this course was very easy to understand, but while impletementing the methods mentiond in the note and the opencv library were sometimes not easy for me because everything is new to me, however, when I see the successfully testing result, I was exciting . The most difficult part was to understand how to draw polynonomial line on the lane pixels, even though theoretically it is easy to understand, I was struggling to how to make a moving window to select lane pixels. \n",
+    " \n",
+    "Next thing are the drawbacks of this algorithm. Firstly, When testing on other challenging video, this algorithm is not robustness, expecially in the places where the road is very dirty and we can see many other lines besides the lane lines were detected on the road, and also on the places where the road is not flat.  I think these can be improved by engieering the color channel shreshold and x direction gradient shreshold parameters. One can add more shresholds into the image processing, for example, besides the S channel that was used in the algorithm, the L channel could also be added to get rid of those lines that are not lane lines. Second drawback is that, if one wants to implement this algorithm on other videos on diffirent places or even different courtries, one has to choose corners area again to fit the enviroment. An improvement would be that to come up with an algorithm that detects the corners automatically. \n",
+    " \n",
+    " All in all, I have learnt a lot in this project.  I would like to take the next level challenge video in the following days. \n",
+    " \n",
     "\n"
    ]
   },
